tests/ui/parser/issues/issue-87217-keyword-order/const-async-const.stderr
error: expected one of `extern`, `fn`, `safe`, or `unsafe`, found keyword `const`
  --> $DIR/const-async-const.rs:5:13
   |
LL | const async const fn test() {}
   |             ^^^^^ expected one of `extern`, `fn`, `safe`, or `unsafe`
   |
note: `const` first seen here
  --> $DIR/const-async-const.rs:5:1
   |
LL | const async const fn test() {}
   | ^^^^^
help: `const` already used earlier, remove this one
   |
LL - const async const fn test() {}
LL + const async  fn test() {}
   |

error: functions cannot be both `const` and `async`
  --> $DIR/const-async-const.rs:5:1
   |
LL | const async const fn test() {}
   | ^^^^^-^^^^^-------------------
   | |     |
   | |     `async` because of this
   | `const` because of this

error: aborting due to 2 previous errors

